--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,6 @@
 {
-    "singleQuote": true
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true,
+    "arrowParens": "always"
 }
