--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "git+https://github.com/spiftire/mobileogdistribuerteapp.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Steffen Holanger",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/spiftire/mobileogdistribuerteapp/issues"
