--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "School project where we create a duplicate of the webpake finn.no called fant.no",
   "main": "main.js",
   "dependencies": {
-    "eslint-config-prettier": "^6.3.0",
     "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "prettier-plugin-html-template-literals": "^1.0.5"
   },
   "devDependencies": {
     "eslint": "^6.3.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
